test/unit-tests/data-and-models/testData/sample_pickles/negativeSamples/4.pickle
version https://git-lfs.github.com/spec/v1
oid sha256:bb4db8102f2e73a6e44ed1ee68f4fe551b459579dfce69447bf58bb81dd1da04
size 4560251
